# compositional-graph-models

./: .gitignore  README.md  pyproject.toml
compositional_graph_models/: data.py  lstm_model.py  models.py  modules.py  train.py
compositional_graph_models/conf/: evaluation.yaml  training.yaml
compositional_graph_models/conf/model/: graph_cnn.yaml  tree_lstm.yaml  tree_rnn.yaml  tree_smu.yaml
compositional_graph_models_program_trees/: data.py  evaluation.py  train.py
data/equation_verification/: 40k_1_to_2_train.json  40k_1_to_2_val.json  40k_1_to_3_train.json  40k_1_to_3_val.json  40k_1_to_4_train.json  40k_1_to_4_val.json  40k_3_test.json  40k_4_test.json  40k_5_to_7_test.json  40k_test_final.json  40k_test_original.json  40k_train.json  40k_val_shallow.json  candidate_classes.json  easy.json
data/equation_verification/40kdata_subsampled/: 40k_20percent_train.json  40k_20percent_val_shallow.json  40k_50percent_train.json  40k_50percent_val_shallow.json  40k_80percent_train.json  40k_80percent_val_shallow.json  40k_90percent_train.json  40k_90percent_val_shallow.json
data/equation_verification/blanks/: 40k_test_blank_0.json  40k_test_blank_1.json  40k_test_blank_10.json  40k_test_blank_11.json  40k_test_blank_12.json  40k_test_blank_13.json  40k_test_blank_14.json  40k_test_blank_2.json  40k_test_blank_3.json  40k_test_blank_4.json  40k_test_blank_5.json  40k_test_blank_6.json  40k_test_blank_7.json  40k_test_blank_8.json  40k_test_blank_9.json
