[tool.poetry]
name = "compositional-graph-models"
version = "0.1.0"
description = "Experiments in compositional learning with tree- and graph-structured models."
authors = ["Aidan Swope <aidanswope@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.6.8"
torch = "^1.6.0"
torchvision = "^0.7.0"
dgl = "^0.5.2"
pytorch-lightning = "^1.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
