[tool.poetry]
name = "compositional-graph-models"
version = "0.1.0"
description = "Experiments in compositional learning with tree- and graph-structured models."
authors = ["Aidan Swope <aidanswope@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.6.8"
pytorch-lightning = "^1.0.2"
hydra-core = "^1.0.3"
matplotlib = "^3.3.2"
dgl-cu101 = "^0.5.2"
graphviz = "^0.14.2"
pygraphviz = "^1.6"
torch-scatter = {url = "https://pytorch-geometric.com/whl/torch-1.6.0/torch_scatter-latest%2Bcu101-cp38-cp38-linux_x86_64.whl"}
torch = {url = "https://download.pytorch.org/whl/cu101/torch-1.6.0%2Bcu101-cp38-cp38-linux_x86_64.whl"}

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
train = 'compositional_graph_models.train:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
